refactoring applied. env vars removed from dockerfile. config loader genera

--- a/src/base/Dockerfile
+++ b/src/base/Dockerfile
@@ -6,317 +6,15 @@ FROM mpolatcan/hadoop:${HADOOP_VERSION}-java${JAVA_VERSION}
 MAINTAINER Mutlu Polatcan <mutlupolatcan@gmail.com>
 
 ARG LIVY_VERSION=""
-ARG LIVY_ZIP_FOLDER_NAME="apache-livy-${LIVY_VERSION}-incubating-bin"
-ARG LIVY_DOWNLOAD_LINK="http://www-eu.apache.org/dist/incubator/livy/${LIVY_VERSION}-incubating/${LIVY_ZIP_FOLDER_NAME}.zip"
+ARG LIVY_ZIP_FOLDER_NAME="livy-${LIVY_VERSION}-incubating-bin"
+ARG LIVY_DOWNLOAD_LINK="http://downloads.apache.org/incubator/livy/${LIVY_VERSION}-incubating/${LIVY_ZIP_FOLDER_NAME}.zip"
 
 ENV SPARK_HOME="${HDUSER_HOME}/spark" \
     LIVY_HOME="${HDUSER_HOME}/livy"
 ENV SPARK_CONF_DIR="${SPARK_HOME}/conf" \
     LIVY_CONF_DIR="${LIVY_HOME}/conf" \
     SPARK_DAEMONS="NULL" \
-    PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin \
-	SPARK_DEFAULT_PARALLELISM="NULL" \
-	SPARK_DRIVER_CORES="1" \
-	SPARK_DRIVER_MAXRESULTSIZE="1g" \
-	SPARK_DRIVER_MEMORY="1g" \
-	SPARK_DRIVER_MEMORYOVERHEAD="NULL" \
-	SPARK_DRIVER_SUPERVISE="false" \
-	SPARK_DRIVER_EXTRACLASSPATH="NULL" \
-	SPARK_DRIVER_EXTRAJAVAOPTIONS="NULL" \
-	SPARK_DRIVER_EXTRALIBRARYPATH="NULL" \
-	SPARK_DRIVER_USERCLASSPATHFIRST="NULL" \
-	SPARK_DRIVER_BLOCKMANAGER_PORT="NULL" \
-	SPARK_DRIVER_BINDADDRESS="NULL" \
-	SPARK_DRIVER_HOST="NULL" \
-	SPARK_DRIVER_PORT="NULL" \
-	SPARK_EXECUTOR_MEMORY="1g" \
-	SPARK_EXECUTOR_MEMORYOVERHEAD="NULL" \
-	SPARK_EXECUTOR_EXTRACLASSPATH="NULL" \
-	SPARK_EXECUTOR_EXTRAJAVAOPTIONS="NULL" \
-	SPARK_EXECUTOR_EXTRALIBRARYPATH="NULL" \
-	SPARK_EXECUTOR_USERCLASSPATHFIRST="false" \
-	SPARK_EXECUTOR_LOGS_ROLLING_MAXRETAINEDFILES="NULL" \
-	SPARK_EXECUTOR_LOGS_ROLLING_ENABLECOMPRESSION="false" \
-	SPARK_EXECUTOR_LOGS_ROLLING_MAXSIZE="NULL" \
-	SPARK_EXECUTOR_LOGS_ROLLING_STRATEGY="NULL" \
-	SPARK_EXECUTOR_LOGS_ROLLING_TIME_INTERVAL="daily" \
-	SPARK_EXECUTOR_PYSPARK_MEMORY="NULL" \
-	SPARK_EXECUTOR_CORES="1" \
-	SPARK_EXECUTOR_HEARTBEATINTERVAL="10s" \
-	SPARK_EXECUTOR_INSTANCES="NULL" \
-	SPARK_EXTRALISTENERS="NULL" \
-	SPARK_LOCAL_DIR="/tmp" \
-	SPARK_LOGCONF="false" \
-	SPARK_MASTER="yarn" \
-	SPARK_SUBMIT_DEPLOYMODE="NULL" \
-	SPARK_SUBMIT_PYFILES="NULL" \
-	SPARK_LOG_CALLERCONTEXT="NULL" \
-	SPARK_REDACTION_REGEX="NULL" \
-	SPARK_PYTHON_PROFILE="false" \
-	SPARK_PYTHON_PROFILE_DUMP="NULL" \
-	SPARK_PYTHON_WORKER_MEMORY="512m" \
-	SPARK_PYTHON_WORKER_REUSE="true" \
-	SPARK_FILES="NULL" \
-	SPARK_FILES_FETCHTIMEOUT="60s" \
-	SPARK_FILES_USEFETCHCACHE="true" \
-	SPARK_FILES_OVERWRITE="false" \
-	SPARK_FILES_MAXPARTITIONBYTES="134217728" \
-	SPARK_FILES_OPENCOSTINBYTES="4194304" \
-	SPARK_JARS="NULL" \
-	SPARK_JARS_PACKAGES="NULL" \
-	SPARK_JARS_EXCLUDES="NULL" \
-	SPARK_JARS_IVY="NULL" \
-	SPARK_JARS_IVYSETTINGS="NULL" \
-	SPARK_JARS_REPOSITORIES="NULL" \
-	SPARK_PYSPARK_DRIVER_PYTHON="NULL" \
-	SPARK_PYSPARK_PYTHON="NULL" \
-	SPARK_REDUCER_MAXSIZEINFLIGHT="48m" \
-	SPARK_REDUCER_MAXREQSINFLIGHT="NULL" \
-	SPARK_REDUCER_MAXBLOCKSINFLIGHTPERADDRESS="NULL" \
-	SPARK_MAXREMOTEBLOCKSIZEFETCHTOMEM="NULL" \
-	SPARK_SHUFFLE_COMPRESS="true" \
-	SPARK_SHUFFLE_FILE_BUFFER="32k" \
-	SPARK_SHUFFLE_IO_MAXRETRIES="3" \
-	SPARK_SHUFFLE_IO_NUMCONNECTIONSPERPEER="1" \
-	SPARK_SHUFFLE_IO_PREFERDIRECTBUFS="true" \
-	SPARK_SHUFFLE_IO_RETRYWAIT="5s" \
-	SPARK_SHUFFLE_IO_ENCRYPTION_ENABLED="false" \
-	SPARK_SHUFFLE_IO_ENCRYPTION_KEYSIZEBITS="128" \
-	SPARK_SHUFFLE_IO_ENCRYPTION_KEYGEN_ALGORITHM="HmacSHA1" \
-	SPARK_SHUFFLE_SERVICE_ENABLED="false" \
-	SPARK_SHUFFLE_SERVICE_PORT="7337" \
-	SPARK_SHUFFLE_SERVICE_INDEX_CACHE_SIZE="100m" \
-	SPARK_SHUFFLE_MAXCHUNKSBEINGTRANSFERRED="NULL" \
-	SPARK_SHUFFLE_SORT_BYPASSMERGETHRESHOLD="200" \
-	SPARK_SHUFFLE_SPILL_COMPRESS="true" \
-	SPARK_SHUFFLE_REGISTRATION_TIMEOUT="5000" \
-	SPARK_SHUFFLE_REGISTRATION_MAXATTEMPTS="3" \
-	SPARK_SHUFFLE_MEMORYFRACTION="0.2" \
-	SPARK_EVENTLOG_LOGBLOCKUPDATES_ENABLED="false" \
-	SPARK_EVENTLOG_LONGFORM_ENABLED="false" \
-	SPARK_EVENTLOG_COMPRESS="false" \
-	SPARK_EVENTLOG_DIR="file:///tmp/spark-events" \
-	SPARK_EVENTLOG_ENABLED="false" \
-	SPARK_EVENTLOG_OVERWRITE="false" \
-	SPARK_EVENTLOG_BUFFER_KB="100k" \
-	SPARK_UI_DAGGRAPH_RETAINEDROOTRDDS="NULL" \
-	SPARK_UI_ENABLED="true" \
-	SPARK_UI_KILLENABLED="true" \
-	SPARK_UI_LIVEUPDATE_PERIOD="NULL" \
-	SPARK_UI_LIVEUPDATE_MINFLUSHPERIOD="NULL" \
-	SPARK_UI_PORT="4040" \
-	SPARK_UI_RETAINEDJOBS="1000" \
-	SPARK_UI_RETAINEDSTAGES="1000" \
-	SPARK_UI_RETAINEDTASKS="100000" \
-	SPARK_UI_REVERSEPROXY="true" \
-	SPARK_UI_REVERSEPROXYURL="NULL" \
-	SPARK_UI_SHOWCONSOLEPROGRESS="true" \
-	SPARK_UI_RETAINEDDEADEXECUTORS="100" \
-	SPARK_UI_FILTERS="NULL" \
-	SPARK_UI_VIEW_ACLS="NULL" \
-	SPARK_UI_VIEW_ACLS_GROUPS="NULL" \
-	SPARK_WORKER_UI_RETAINEDEXECUTORS="1000" \
-	SPARK_WORKER_UI_RETAINEDDRIVERS="1000" \
-	SPARK_SQL_UI_RETAINEDEXECUTIONS="1000" \
-	SPARK_STREAMING_UI_RETAINEDBATCHES="1000" \
-	SPARK_STREAMING_BACKPRESSURE_ENABLED="false" \
-	SPARK_STREAMING_BACKPRESSURE_INITIALRATE="NULL" \
-	SPARK_STREAMING_BLOCKINTERVAL="200ms" \
-	SPARK_STREAMING_RECEIVER_MAXRATE="NULL" \
-	SPARK_STREAMING_RECEIVER_WRITEAHEADLOG_ENABLE="false" \
-	SPARK_STREAMING_RECEIVER_WRITEAHEADLOG_CLOSEFILEAFTERWRITE="false" \
-	SPARK_STREAMING_UNPERSIST="true" \
-	SPARK_STREAMING_STOPGRACEFULLYONSHUTDOWN="false" \
-	SPARK_STREAMING_KAFKA_MAXRATEPERPARTITION="NULL" \
-	SPARK_STREAMING_KAFKA_MAXRETRIES="1" \
-	SPARK_STREAMING_DRIVER_WRITEAHEADLOG_CLOSEFILEAFTERWRITE="false" \
-	SPARK_BROADCAST_COMPRESS="true" \
-	SPARK_BROADCAST_BLOCKSIZE="4m" \
-	SPARK_BROADCAST_CHECKSUM="NULL" \
-	SPARK_CHECKPOINT_COMPRESS="NULL" \
-	SPARK_IO_COMPRESSION_CODEC="lz4" \
-	SPARK_IO_COMPRESSION_LZ4_BLOCKSIZE="32k" \
-	SPARK_IO_COMPRESSION_SNAPPY_BLOCKSIZE="32k" \
-	SPARK_IO_COMPRESSION_ZSTD_LEVEL="1" \
-	SPARK_IO_COMPRESSION_ZSTD_BUFFERSIZE="32k" \
-	SPARK_KRYO_CLASSESTOREGISTER="NULL" \
-	SPARK_KRYO_REFERENCETRACKING="true" \
-	SPARK_KRYO_REGISTRATIONREQUIRED="false" \
-	SPARK_KRYO_REGISTRATOR="NULL" \
-	SPARK_KRYO_UNSAFE="false" \
-	SPARK_KRYOSERIALIZER_BUFFER="64k" \
-	SPARK_KRYOSERIALIZER_BUFFER_MAX="64m" \
-	SPARK_RDD_COMPRESS="false" \
-	SPARK_SERIALIZER="org.apache.spark.serializer.JavaSerializer" \
-	SPARK_SERIALIZER_OBJECTSTREAMRESET="100" \
-	SPARK_MEMORY_FRACTION="0.6" \
-	SPARK_MEMORY_STORAGEFRACTION="0.5" \
-	SPARK_MEMORY_OFFHEAP_ENABLED="false" \
-	SPARK_MEMORY_OFFHEAP_SIZE="0" \
-	SPARK_MEMORY_USELEGACYMODE="false" \
-	SPARK_STORAGE_MEMORYFRACTION="0.2" \
-	SPARK_STORAGE_UNROLLFRACTION="0.6" \
-	SPARK_STORAGE_REPLICATION_PROACTIVE="false" \
-	SPARK_STORAGE_MEMORYMAPTHRESHOLD="2m" \
-	SPARK_CLEANER_PERIODICGC_INTERVAL="30min" \
-	SPARK_CLEANER_REFERENCETRACKING="true" \
-	SPARK_CLEANER_REFERENCETRACKING_BLOCKING="true" \
-	SPARK_CLEANER_REFERENCETRACKING_BLOCKING_SHUFFLE="false" \
-	SPARK_CLEANER_REFERENCETRACKING_CLEANCHECKPOINTS="false" \
-	SPARK_HADOOP_CLONECONF="false" \
-	SPARK_HADOOP_VALIDATEOUTPUTSPECS="true" \
-	SPARK_HADOOP_MAPREDUCE_FILEOUTPUTCOMMITTER_ALGORITHM_VERSION="1" \
-	SPARK_RPC_MESSAGE_MAXSIZE="128" \
-	SPARK_RPC_IO_BACKLOG="NULL" \
-	SPARK_RPC_NUMRETRIES="3" \
-	SPARK_RPC_RETRY_WAIT="3s" \
-	SPARK_RPC_ASKTIMEOUT="120s" \
-	SPARK_RPC_LOOKUPTIMEOUT="120s" \
-	SPARK_BLOCKMANAGER_PORT="NULL" \
-	SPARK_PORT_MAXRETRIES="16" \
-	SPARK_CORES_MAX="NULL" \
-	SPARK_LOCALITY_WAIT="3s" \
-	SPARK_LOCALITY_WAIT_NODE="NULL" \
-	SPARK_LOCALITY_WAIT_PROCESS="NULL" \
-	SPARK_LOCALITY_WAIT_RACK="NULL" \
-	SPARK_SCHEDULER_MAXREGISTEREDRESOURCESWAITINGTIME="30s" \
-	SPARK_SCHEDULER_MINREGISTEREDRESOURCESRATION="0.0" \
-	SPARK_SCHEDULER_MODE="FIFO" \
-	SPARK_SCHEDULER_REVIVE_INTERVAL="1s" \
-	SPARK_SCHEDULER_LISTENERBUS_EVENTQUEUE_CAPACITY="10000" \
-	SPARK_SCHEDULER_BLACKLIST_UNSCHEDULABLETASKSETTIMEOUT="NULL" \
-	SPARK_BLACKLIST_ENABLED="false" \
-	SPARK_BLACKLIST_TIMEOUT="1h" \
-	SPARK_BLACKLIST_TASK_MAXTASKATTEMPTSPEREXECUTOR="1" \
-	SPARK_BLACKLIST_TASK_MAXTASKATTEMPTSPERNODE="2" \
-	SPARK_BLACKLIST_STAGE_MAXFAILEDTASKPEREXECUTOR="2" \
-	SPARK_BLACKLIST_STAGE_MAXFAILEDEXECUTORSPERNODE="2" \
-	SPARK_BLACKLIST_APPLICATION_MAXFAILEDTASKSPEREXECUTOR="2" \
-	SPARK_BLACKLIST_APPLICATION_MAXFAILEDEXECUTORSPERNODE="2" \
-	SPARK_BLACKLIST_APPLICATION_FETCHFAILURE_ENABLED="false" \
-	SPARK_BLACKLIST_KILLBLACKLISTEDEXECUTORS="false" \
-	SPARK_SPECULATION="false" \
-	SPARK_SPECULATION_INTERVAL="100ms" \
-	SPARK_SPECULATION_MULTIPLIER="1.5" \
-	SPARK_SPECULATION_QUANTILE="0.75" \
-	SPARK_TASK_CPUS="1" \
-	SPARK_TASK_MAXFAILURES="4" \
-	SPARK_TASK_REAPER_ENABLED="false" \
-	SPARK_TASK_REAPER_POLLINGINTERVAL="10s" \
-	SPARK_TASK_REAPER_THREADDUMP="true" \
-	SPARK_TASK_REAPER_KILLTIMEOUT="-1" \
-	SPARK_STAGE_MAXCONSECUTIVEATTEMPTS="4" \
-	SPARK_DYNAMICALLOCATION_ENABLED="false" \
-	SPARK_DYNAMICALLOCATION_EXECUTORIDLETIMEOUT="60s" \
-	SPARK_DYNAMICALLOCATION_INITIALEXECUTORS="NULL" \
-	SPARK_DYNAMICALLOCATION_CACHEDEXECUTORIDLETIMEOUT="infinity" \
-	SPARK_DYNAMICALLOCATION_MAXEXECUTORS="infinity" \
-	SPARK_DYNAMICALLOCATION_MINEXECUTORS="0" \
-	SPARK_DYNAMICALLOCATION_EXECUTORALLOCATIONRATIO="NULL" \
-	SPARK_DYNAMICALLOCATION_SCHEDULERBACKLOGTIMEOUT="1s" \
-	SPARK_ACLS_ENABLED="false" \
-	SPARK_ADMIN_ACLS="NULL" \
-	SPARK_ADMIN_ACLS_GROUPS="NULL" \
-	SPARK_USER_GROUPS_MAPPING="org.apache.spark.security.ShellBasedGroupsMappingProvider" \
-	SPARK_AUTHENTICATE="false" \
-	SPARK_AUTHENTICATE_SECRET="NULL" \
-	SPARK_AUTHENTICATE_ENABLESASLENCRPYTION="false" \
-	SPARK_NETWORK_CRYPTO_ENABLED="false" \
-	SPARK_NETWORK_CRYPTO_KEYLENGTH="128" \
-	SPARK_NETWORK_CRYPTO_KEYFACTORYALGORITHM="PBKDF2WithHmacSHA1" \
-	SPARK_NETWORK_CRYPTO_SASLFALLBACK="true" \
-	SPARK_NETWORK_SASL_SERVERALWAYSENCRYPT="false" \
-	SPARK_CORE_CONNECTION_ACK_WAIT_TIMEOUT="NULL" \
-	SPARK_MODIFY_ACLS="NULL" \
-	SPARK_MODIFY_ACLS_GROUPS="NULL" \
-	SPARK_SSL_ENABLED="false" \
-	SPARK_SSL_ENABLEDALGORITHMS="NULL" \
-	SPARK_SSL_KEYPASSWORD="NULL" \
-	SPARK_SSL_KEYSTORE="NULL" \
-	SPARK_SSL_KEYSTOREPASSWORD="NULL" \
-	SPARK_SSL_KEYSTORETYPE="JKS" \
-	SPARK_SSL_PROTOCOL="NULL" \
-	SPARK_SSL_NEEDCLIENTAUTH="false" \
-	SPARK_SSL_TRUSTSTORE="NULL" \
-	SPARK_SSL_TRUSTSTOREPASSWORD="NULL" \
-	SPARK_SSL_TRUSTSTORETYPE="JKS" \
-	SPARK_GRAPHX_PREGEL_CHECKPOINTINTERVAL="-1" \
-	SPARK_DEPLOY_RECOVERYMODE="NULL" \
-	SPARK_DEPLOY_ZOOKEEPER_URL="NULL" \
-	SPARK_DEPLOY_ZOOKEEPER_DIR="NULL" \
-	SPARK_YARN_AM_MEMORY="NULL" \
-	SPARK_YARN_AM_CORES="NULL" \
-	SPARK_YARN_AM_WAITTIME="NULL" \
-	SPARK_YARN_AM_MEMORYOVERHEAD="NULL" \
-	SPARK_YARN_AM_EXTRAJAVAOPTIONS="NULL" \
-	SPARK_YARN_AM_EXTRALIBRARYPATH="NULL" \
-	SPARK_YARN_AM_ATTEMPTFAILURESVALIDITYINTERVAL="NULL" \
-	SPARK_YARN_AM_NODELABELEXPRESSION="NULL" \
-	SPARK_YARN_SUBMIT_FILE_REPLICATION="NULL" \
-	SPARK_YARN_SUBMIT_WAITAPPCOMPLETION="NULL" \
-	SPARK_YARN_STAGINGDIR="NULL" \
-	SPARK_YARN_PRESERVE_STAGING_FILES="NULL" \
-	SPARK_YARN_SCHEDULER_HEARTBEAT_INTERVAL_MS="NULL" \
-	SPARK_YARN_SCHEDULER_INITIAL_ALLOCATION_INTERVAL="NULL" \
-	SPARK_YARN_MAX_EXECUTOR_FAILURES="NULL" \
-	SPARK_YARN_HISTORYSERVER_ADDRESS="NULL" \
-	SPARK_YARN_DIST_FILES="NULL" \
-	SPARK_YARN_DIST_JARS="NULL" \
-	SPARK_YARN_DIST_FORCEDOWNLOADSCHEMES="NULL" \
-	SPARK_YARN_QUEUE="NULL" \
-	SPARK_YARN_JARS="NULL" \
-	SPARK_YARN_ARCHIVE="NULL" \
-	SPARK_YARN_CONTAINERLAUNCHERMAXTHREADS="NULL" \
-	SPARK_YARN_MAXAPPATTEMPTS="NULL" \
-	SPARK_YARN_EXECUTOR_FAILURESVALIDITYINTERVAL="NULL" \
-	SPARK_YARN_EXECUTOR_NODELABELEXPRESSION="NULL" \
-	SPARK_YARN_TAGS="NULL" \
-	SPARK_YARN_CONFIG_GATEWAYPATH="NULL" \
-	SPARK_YARN_CONFIG_REPLACEMENTPATH="NULL" \
-	SPARK_YARN_ROLLEDLOG_INCLUDEPATTERN="NULL" \
-	SPARK_YARN_ROLLEDLOG_EXCLUDEPATTERN="NULL" \
-	SPARK_YARN_BLACKLIST_EXECUTOR_LAUNCH_BLACKLISTING_ENABLED="NULL" \
-	SPARK_YARN_METRICS_NAMESPACE="NULL" \
-	LIVY_KEYSTORE="NULL" \
-	LIVY_KEYSTORE_PASSWORD="NULL" \
-	LIVY_KEY_PASSWORD="NULL" \
-	LIVY_HADOOP_SECURITY_CREDENTIAL_PROVIDER_PATH="NULL" \
-	LIVY_SERVER_HOST="0.0.0.0" \
-	LIVY_SERVER_PORT="8998" \
-	LIVY_SERVER_REQUEST_HEADER_SIZE="131072" \
-	LIVY_SERVER_RESPONSE_HEADER_SIZE="131072" \
-	LIVY_SERVER_SESSION_TIMEOUT_CHECK="true" \
-	LIVY_SERVER_SESSION_TIMEOUT="1h" \
-	LIVY_SERVER_SESSION_STATE_RETAIN_SEC="600s" \
-	LIVY_SERVER_CSRF_PROTECTION_ENABLED="NULL" \
-	LIVY_SERVER_RECOVERY_MODE="off" \
-	LIVY_SERVER_RECOVERY_STATE_STORE="NULL" \
-	LIVY_SERVER_RECOVERY_STATE_STORE_URL="NULL" \
-	LIVY_SERVER_YARN_APP_LOOKUP_TIMEOUT="120s" \
-	LIVY_SERVER_YARN_APP_LEAKAGE_CHECK_TIMEOUT="600s" \
-	LIVY_SERVER_YARN_APP_LEAKAGE_CHECK_INTERVAL="60s" \
-	LIVY_SERVER_YARN_POLL_INTERVAL="5s" \
-	LIVY_SERVER_REQUEST_LOG_RETAIN_DAYS="5" \
-	LIVY_SERVER_ACCESS_CONTROL_ENABLED="false" \
-	LIVY_SERVER_ACCESS_CONTROL_ALLOWED_USERS="*" \
-	LIVY_SERVER_ACCESS_CONTROL_MODIFY_USERS="NULL" \
-	LIVY_SERVER_ACCESS_CONTROL_VIEW_USERS="NULL" \
-	LIVY_SERVER_AUTH_TYPE="NULL" \
-	LIVY_SERVER_AUTH_KERBEROS_PRINCIPAL="NULL" \
-	LIVY_SERVER_AUTH_KERBEROS_KEYTAB="NULL" \
-	LIVY_SERVER_AUTH_KERBEROS_NAME_RULES="NULL" \
-	LIVY_UI_BASEPATH="NULL" \
-	LIVY_UI_ENABLED="true" \
-	LIVY_SPARK_MASTER="yarn" \
-	LIVY_SPARK_DEPLOYMODE="client" \
-	LIVY_IMPERSONATION_ENABLED="true" \
-	LIVY_CACHE_LOG_SIZE="200" \
-	LIVY_RSC_JARS="NULL" \
-	LIVY_REPL_JARS="NULL" \
-	LIVY_REPL_ENABLE_HIVE_CONTEXT="NULL" \
-	LIVY_PYSPARK_ARCHIVES="NULL" \
-	LIVY_SPARKR_PACKAGE="NULL" \
-	LIVY_FILE_LOCAL_DIR_WHITELIST="NULL"
+    PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin:$LIVY_HOME/bin
 
 ADD entrypoint.sh ${HDUSER_HOME}/spark_entrypoint.sh
 ADD config_loader.sh ${HDUSER_HOME}/spark_config_loader.sh
