--- a/src/utils/config_loader_generator/spark_configs/spark-defaults.yaml
+++ b/src/utils/config_loader_generator/spark_configs/spark-defaults.yaml
@@ -1,7 +1,5 @@
 spark:
-  default:
-    parallelism: "NULL"
-
+  default.parallelism: "NULL"
   driver:
     cores: "1"
     maxResultSize: "1g"
@@ -12,12 +10,10 @@ spark:
     extraJavaOptions: "NULL"
     extraLibraryPath: "NULL"
     userClassPathFirst: "NULL"
-    blockManager:
-      port: "NULL"
+    blockManager.port: "NULL"
     bindAddress: "NULL"
     host: "NULL"
     port: "NULL"
-
   executor:
     memory: "1g"
     memoryOverhead: "NULL"
@@ -25,39 +21,25 @@ spark:
     extraJavaOptions: "NULL"
     extraLibraryPath: "NULL"
     userClassPathFirst: "false"
-    logs:
-      rolling:
-        maxRetainedFiles: "NULL"
-        enableCompression: "false"
-        maxSize: "NULL"
-        strategy: "NULL"
-        time:
-          interval: "daily"
-    pyspark:
-      memory: "NULL"
+    logs.rolling:
+      maxRetainedFiles: "NULL"
+      enableCompression: "false"
+      maxSize: "NULL"
+      strategy: "NULL"
+      time.interval: "daily"
+    pyspark.memory: "NULL"
     cores: "1"
     heartbeatInterval: "10s"
     instances: "NULL"
-
   extraListeners: "NULL"
-
-  local:
-    dir: "/tmp"
-
+  local.dir: "/tmp"
   logConf: "false"
-
   master: "yarn"
-
   submit:
     deployMode: "NULL"
     pyFiles: "NULL"
-
-  log:
-    callerContext: "NULL"
-
-  redaction:
-    regex: "NULL"
-
+  log.callerContext: "NULL"
+  redaction.regex: "NULL"
   python:
     profile:
       "": "false"
@@ -65,7 +47,6 @@ spark:
     worker:
       memory: "512m"
       reuse: "true"
-
   files:
     "": "NULL"
     fetchTimeout: "60s"
@@ -73,7 +54,6 @@ spark:
     overwrite: "false"
     maxPartitionBytes: "134217728"
     openCostInBytes: "4194304"
-
   jars:
     "": "NULL"
     packages: "NULL"
@@ -81,23 +61,17 @@ spark:
     ivy: "NULL"
     ivySettings: "NULL"
     repositories: "NULL"
-
   pyspark:
-    driver:
-      python: "NULL"
+    driver.python: "NULL"
     python: "NULL"
-
   reducer:
     maxSizeInFlight: "48m"
     maxReqsInFlight: "NULL"
     maxBlocksInFlightPerAddress: "NULL"
-
   maxRemoteBlockSizeFetchToMem: "NULL"
-
   shuffle:
     compress: "true"
-    file:
-      buffer: "32k"
+    file.buffer: "32k"
     io:
       maxRetries: "3"
       numConnectionsPerPeer: "1"
@@ -106,39 +80,28 @@ spark:
       encryption:
         enabled: "false"
         keySizeBits: "128"
-        keygen:
-          algorithm: "HmacSHA1"
+        keygen.algorithm: "HmacSHA1"
     service:
       enabled: "false"
       port: "7337"
-      index:
-        cache:
-          size: "100m"
+      index.cache.size: "100m"
     maxChunksBeingTransferred: "NULL"
-    sort:
-      bypassMergeThreshold: "200"
-    spill:
-      compress: "true"
+    sort.bypassMergeThreshold: "200"
+    spill.compress: "true"
     registration:
       timeout: "5000"
       maxAttempts: "3"
     memoryFraction: "0.2"
-
   eventlog:
-    logBlockUpdates:
-      enabled: "false"
-    longForm:
-      enabled: "false"
+    logBlockUpdates.enabled: "false"
+    longForm.enabled: "false"
     compress: "false"
     dir: "file:///tmp/spark-events"
     enabled: "false"
     overwrite: "false"
-    buffer:
-      kb: "100k"
-
+    buffer.kb: "100k"
   ui:
-    dagGraph:
-      retainedRootRDDs: "NULL"
+    dagGraph.retainedRootRDDs: "NULL"
     enabled: "true"
     killEnabled: "true"
     liveUpdate:
@@ -153,23 +116,15 @@ spark:
     showConsoleProgress: "true"
     retainedDeadExecutors: "100"
     filters: "NULL"
-    view:
-      acls:
-        "": "NULL"
-        groups: "NULL"
-
-  worker:
-    ui:
-      retainedExecutors: "1000"
-      retainedDrivers: "1000"
-
-  sql:
-    ui:
-      retainedExecutions: "1000"
-
+    view.acls:
+      "": "NULL"
+      groups: "NULL"
+  worker.ui:
+    retainedExecutors: "1000"
+    retainedDrivers: "1000"
+  sql.ui.retainedExecutions: "1000"
   streaming:
-    ui:
-      retainedBatches: "1000"
+    ui.retainedBatches: "1000"
     backpressure:
       enabled: "false"
       initialRate: "NULL"
@@ -184,48 +139,32 @@ spark:
     kafka:
       maxRatePerPartition: "NULL"
       maxRetries: "1"
-    driver:
-      writeAheadLog:
-        closeFileAfterWrite: "false"
-
+    driver.writeAheadLog.closeFileAfterWrite: "false"
   broadcast:
     compress: "true"
     blockSize: "4m"
     checksum: "NULL"
-
-  checkpoint:
-    compress: "NULL"
-
-  io:
-    compression:
-      codec: "lz4"
-      lz4:
-        blockSize: "32k"
-      snappy:
-        blockSize: "32k"
-      zstd:
-        level: "1"
-        bufferSize: "32k"
-
+  checkpoint.compress: "NULL"
+  io.compression:
+    codec: "lz4"
+    lz4.blockSize: "32k"
+    snappy.blockSize: "32k"
+    zstd:
+      level: "1"
+      bufferSize: "32k"
   kryo:
     classesToRegister: "NULL"
     referenceTracking: "true"
     registrationRequired: "false"
     registrator: "NULL"
     unsafe: "false"
-
-  kryoserializer:
-    buffer:
-      "": "64k"
-      max: "64m"
-
-  rdd:
-    compress: "false"
-
+  kryoserializer.buffer:
+    "": "64k"
+    max: "64m"
+  rdd.compress: "false"
   serializer:
     "": "org.apache.spark.serializer.JavaSerializer"
     objectStreamReset: "100"
-
   memory:
     fraction: "0.6"
     storageFraction: "0.5"
@@ -233,72 +172,45 @@ spark:
       enabled: "false"
       size: "0"
     useLegacyMode: "false"
-
   storage:
     memoryFraction: "0.2"
     unrollFraction: "0.6"
-    replication:
-      proactive: "false"
+    replication.proactive: "false"
     memoryMapThreshold: "2m"
-
   cleaner:
-    periodicGC:
-      interval: "30min"
+    periodicGC.interval: "30min"
     referenceTracking:
       "": "true"
       blocking:
         "": "true"
         shuffle: "false"
       cleanCheckpoints: "false"
-
   hadoop:
     cloneConf: "false"
     validateOutputSpecs: "true"
-    mapreduce:
-      fileoutputcommitter:
-        algorithm:
-          version: "1"
-
+    mapreduce.fileoutputcommitter.algorithm.version: "1"
   rpc:
-    message:
-      maxSize: "128"
-    io:
-      backLog: "NULL"
+    message.maxSize: "128"
+    io.backLog: "NULL"
     numRetries: "3"
-    retry:
-      wait: "3s"
+    retry.wait: "3s"
     askTimeout: "120s"
     lookupTimeout: "120s"
-
-  blockManager:
-    port: "NULL"
-
-  port:
-    maxRetries: "16"
-
-  cores:
-    max: "NULL"
-
-
-  locality:
-    wait:
-      "": "3s"
-      node: "NULL"
-      process: "NULL"
-      rack: "NULL"
-
+  blockManager.port: "NULL"
+  port.maxRetries: "16"
+  cores.max: "NULL"
+  locality.wait:
+    "": "3s"
+    node: "NULL"
+    process: "NULL"
+    rack: "NULL"
   scheduler:
     maxRegisteredResourcesWaitingTime: "30s"
     minRegisteredResourcesRation: "0.0"
     mode: "FIFO"
-    revive:
-      interval: "1s"
-    listenerbus:
-      eventqueue:
-        capacity: "10000"
-    blacklist:
-      unschedulableTaskSetTimeout: "NULL"
-
+    revive.interval: "1s"
+    listenerbus.eventqueue.capacity: "10000"
+    blacklist.unschedulableTaskSetTimeout: "NULL"
   blacklist:
     enabled: "false"
     timeout: "1h"
@@ -311,16 +223,13 @@ spark:
     application:
       maxFailedTasksPerExecutor: "2"
       maxFailedExecutorsPerNode: "2"
-      fetchFailure:
-        enabled: "false"
+      fetchFailure.enabled: "false"
     killBlacklistedExecutors: "false"
-
   speculation:
     "": "false"
     interval: "100ms"
     multiplier: "1.5"
     quantile: "0.75"
-
   task:
     cpus: "1"
     maxFailures: "4"
@@ -329,10 +238,7 @@ spark:
       pollingInterval: "10s"
       threadDump: "true"
       killTimeout: "-1"
-
-  stage:
-    maxConsecutiveAttempts: "4"
-
+  stage.maxConsecutiveAttempts: "4"
   dynamicAllocation:
     enabled: "false"
     executorIdleTimeout: "60s"
@@ -342,45 +248,26 @@ spark:
     minExecutors: "0"
     executorAllocationRatio: "NULL"
     schedulerBacklogTimeout: "1s"
-
-  acls:
-    enabled: "false"
-
-  admin:
-    acls:
-      "": "NULL"
-      groups: "NULL"
-
-  user:
-    groups:
-      mapping: "org.apache.spark.security.ShellBasedGroupsMappingProvider"
-
+  acls.enabled: "false"
+  admin.acls:
+    "": "NULL"
+    groups: "NULL"
+  user.groups.mapping: "org.apache.spark.security.ShellBasedGroupsMappingProvider"
   authenticate:
     "": "false"
     secret: "NULL"
     enableSaslEncrpytion: "false"
-
   network:
     crypto:
       enabled: "false"
       keyLength: "128"
       keyFactoryAlgorithm: "PBKDF2WithHmacSHA1"
       saslFallback: "true"
-    sasl:
-      serverAlwaysEncrypt: "false"
-
-
-  core:
-    connection:
-      ack:
-        wait:
-          timeout: "NULL"
-
-  modify:
-    acls:
-      "": "NULL"
-      groups: "NULL"
-
+    sasl.serverAlwaysEncrypt: "false"
+  core.connection.ack.wait.timeout: "NULL"
+  modify.acls:
+    "": "NULL"
+    groups: "NULL"
   ssl:
     enabled: "false"
     enabledAlgorithms: "NULL"
@@ -393,17 +280,12 @@ spark:
     trustStore: "NULL"
     trustStorePassword: "NULL"
     trustStoreType: "JKS"
-
-  graphx:
-    pregel:
-      checkpointInterval: "-1"
-
+  graphx.pregel.checkpointInterval: "-1"
   deploy:
     recoveryMode: "NULL"
     zookeeper:
       url: "NULL"
       dir: "NULL"
-
   yarn:
     am:
       memory: "NULL"
@@ -415,23 +297,15 @@ spark:
       attemptFailuresValidityInterval: "NULL"
       nodeLabelExpression: "NULL"
     submit:
-      file:
-        replication: "NULL"
+      file.replication: "NULL"
       waitAppCompletion: "NULL"
     stagingDir: "NULL"
-    preserve:
-      staging:
-        files: "NULL"
+    preserve.staging.files: "NULL"
     scheduler:
-      heartbeat:
-        interval-ms: "NULL"
-      initial-allocation:
-        interval: "NULL"
-    max:
-      executor:
-        failures: "NULL"
-    historyServer:
-      address: "NULL"
+      heartbeat.interval-ms: "NULL"
+      initial-allocation.interval: "NULL"
+    max.executor.failures: "NULL"
+    historyServer.address: "NULL"
     dist:
       files: "NULL"
       jars: "NULL"
@@ -451,10 +325,5 @@ spark:
     rolledLog:
       includePattern: "NULL"
       excludePattern: "NULL"
-    blacklist:
-      executor:
-        launch:
-          blacklisting:
-            enabled: "NULL"
-    metrics:
-      namespace: "NULL"
+    blacklist.executor.launch.blacklisting.enabled: "NULL"
+    metrics.namespace: "NULL"
