--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -1,6 +1,9 @@
-name: spark-docker (master)
+name: spark-docker
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build-base-image:
@@ -9,8 +12,8 @@ jobs:
       matrix:
         repository: [spark]
         java_version: [8]
-        hadoop_version: [3.2.1, 3.1.3, 2.9.2, 2.8.5, 2.7.7]
-        livy_version: [0.6.0]
+        hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
+        livy_version: [0.7.0]
     steps:
       - uses: actions/checkout@v1
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
@@ -29,8 +32,8 @@ jobs:
       matrix:
         repository: [spark]
         java_version: [8]
-        spark_version: [2.4.5, 2.3.4]
-        hadoop_version: [3.2.1, 3.1.3, 2.9.2, 2.8.5, 2.7.7]
+        spark_version: [3.0.1, 2.4.7]
+        hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
     needs: build-base-image
     steps:
       - uses: actions/checkout@v1
@@ -50,8 +53,8 @@ jobs:
       matrix:
         repository: [pyspark]
         java_version: [8]
-        spark_version: [2.4.5, 2.3.4]
-        hadoop_version: [3.2.1, 3.1.3, 2.9.2, 2.8.5, 2.7.7]
+        spark_version: [3.0.1, 2.4.7]
+        hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
     needs: build-spark-image
     steps:
       - uses: actions/checkout@v1
