--- a/.github/workflows/docker_publish.yaml
+++ b/.github/workflows/docker_publish.yaml
@@ -15,7 +15,16 @@ jobs:
         hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
         livy_version: [0.7.0]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - run: |
+          python -m pip install --upgrade pip
+          pip install pyyaml
+      - run: |
+          cd src/base
+          python config_loader_generator.py config.yaml
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - run: docker build -q
           -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:base-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
@@ -36,7 +45,7 @@ jobs:
         hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
     needs: build-base-image
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - run: docker build -q
           -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.spark_version}}-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
@@ -57,7 +66,7 @@ jobs:
         hadoop_version: [3.3.0, 3.2.1, 3.1.4, 2.10.1, 2.9.2, 2.8.5, 2.7.7]
     needs: build-spark-image
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
       - run: docker build -q
           -t ${{secrets.DOCKER_USERNAME}}/${{matrix.repository}}:${{matrix.spark_version}}-hadoop-${{matrix.hadoop_version}}-java${{matrix.java_version}}
