--- a/docker/spark/master-worker-cluster/docker-compose.yml
+++ b/docker/spark/master-worker-cluster/docker-compose.yml
@@ -3,7 +3,7 @@
 version: "3.5"
 services:
   master:
-    image: mpolatcan/spark:2.4.4-hadoop-3.2.1-java8
+    image: mpolatcan/spark:2.3.4-hadoop-3.3.0-java8
     container_name: master
     hostname: master
     environment:
@@ -13,6 +13,7 @@ services:
         secondarynamenode
       SPARK_SERVICES: |
         livy
+      FS_DEFAULTFS: "hdfs://0.0.0.0:9000"
       YARN_SCHEDULER_MINIMUM_ALLOCATION_MB: "128"
       YARN_SCHEDULER_MAXIMUM_ALLOCATION_MB: "1536"
       YARN_NODEMANAGER_VMEM_CHECK_ENABLED: "false"
@@ -27,12 +28,12 @@ services:
       - 8998:8998 # livy port
 
   worker:
-    image: mpolatcan/spark:2.4.4-hadoop-3.2.1-java8
+    image: mpolatcan/spark:2.3.4-hadoop-3.3.0-java8
     environment:
       HADOOP_DAEMONS: |
         datanode
         nodemanager
-      DFS_NAMENODE_HOSTNAME: "master"
+      FS_DEFAULTFS: "hdfs://master:9000"
       YARN_RESOURCEMANAGER_HOSTNAME: "master"
       YARN_NODEMANAGER_RESOURCE_MEMORY_MB: "1536"
       YARN_NODEMANAGER_RESOURCE_CPU_VCORES: "2"
